radio-checkbox-new drawer pane